@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-11T01:40:01Z",
+  "timestamp" : "2022-06-11T08:20:45Z",
   "count_outdated" : 2143,
   "uniques_outdated" : 423,
-  "count" : 2174,
-  "uniques" : 443,
+  "count" : 2175,
+  "uniques" : 444,
   "clones" : [
     {
       "timestamp": "2022-05-28T00:00:00Z",
@@ -100,6 +100,13 @@
       "timestamp": "2022-06-10T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
